--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Food Network</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -13,9 +13,18 @@
 </head>
 
 <body>
-    <section>
-        <h1>Skip The Diet,<br>Just Eat Healthy<br>With Food Network</h1>
-        <p>Imagine you don't need a diet because we provide healthy and delicious food for you</p>
+    <section class="header">
+        <div class="half">
+            <h1><span class="text-color">Skip</span> The Diet,<br>Just Eat Healthy<br>With Food Network</h1>
+
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you and your family</p>
+
+            <a class="button" href="https://google.com">Order Food</a>
+        </div>
+        <div class="half header-image">
+            <img src="images/female/Group 8425.png" alt="">
+        </div>
+
     </section>
 </body>
 
