Header, Footer Done

--- a/index.html
+++ b/index.html
@@ -14,15 +14,68 @@
 
 <body>
     <section class="header">
-        <div class="half">
-            <h1><span class="text-color">Skip</span> The Diet,<br>Just Eat Healthy<br>With Food Network</h1>
+        <div class="half" id="text-header">
+            <h1><span class="text-orange">Skip</span> <span class="text-ash">The Diet,<br>Just Eat Healthy<br>With Food
+                    Network</span></h1>
 
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you and your family</p>
 
-            <a class="button" href="https://google.com">Order Food</a>
+            <a class="button" id="order-food" href="https://google.com">Order Food</a>
         </div>
         <div class="half header-image">
             <img src="images/female/Group 8425.png" alt="">
+        </div>
+
+    </section>
+
+    <section class="about-me">
+        <div class="half">
+            <img src="images/female/kisspng-eating-junk-food-hunger-fast-food-woman-eating-5b100f5d437345.6346499515277791652763-removebg-preview.png"
+                alt="">
+        </div>
+        <div class="half" id="text-about-me">
+            <h2 class="text-ash">About Me</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, ratione natus recusandae autem labore
+                deserunt laborum sapiente porro incidunt? Modi dolore voluptate amet nisi, adipisci error praesentium
+                quas tempore id!</p>
+
+            <a class="button" href="https://google.com">Contact Me</a>
+        </div>
+
+    </section>
+
+    <section class="my-receipes">
+        <div class="text-my-receipes">
+            <h1>My Recipies</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, reiciendis vitae, ipsa iusto minus
+                facere magni assumenda culpa pariatur neque provident minima nostrum consequatur porro. Quis ut mollitia
+                deleniti est!</p>
+        </div>
+
+        <div class="foodmenu">
+            <div class="half">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h1>text</h1>
+                <p>text</p>
+            </div>
+            <div>
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h1>text</h1>
+                <p>text</p>
+            </div>
+            <div>
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h1>text</h1>
+                <p>text</p>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="footer">
+        <div class="text-footer">
+            <h2><span class="text-orange">Food</span> <span class="text-ash-bright">Network</span></h2>
+            <p><small> Healthy to live healthy. LIve to live happy</small></p>
         </div>
 
     </section>
