--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
     <title>Food Network</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="header">
         <div class="half" id="text-header">
-            <h1><span class="text-orange">Skip</span> <span class="text-ash">The Diet,<br>Just Eat Healthy<br>With Food
-                    Network</span></h1>
+            <h1><span class="text-orange">Skip</span> <span class="text-ash">The Diet,<br>Just Eat Healthy<br>With
+                    Epic Receipe.</span></h1>
 
-            <p>Imagine you don't need a diet because we provide healthy and delicious food for you and your family</p>
+            <p>Eat healthy day and night, to keep your future looking bright</p>
 
-            <a class="button" id="order-food" href="https://google.com">Order Food</a>
+            <a class="button" id="order-food" href="https://www.foodpanda.com.bd/city/sylhet" target="_blank">Order
+                Food</a>
         </div>
-        <div class="half header-image">
+        <div class="half" id="header-image">
             <img src="images/female/Group 8425.png" alt="">
         </div>
 
@@ -35,11 +37,12 @@
         </div>
         <div class="half" id="text-about-me">
             <h2 class="text-ash">About Me</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, ratione natus recusandae autem labore
-                deserunt laborum sapiente porro incidunt? Modi dolore voluptate amet nisi, adipisci error praesentium
-                quas tempore id!</p>
+            <p>Epic Receipe is the most trusted, authoritative, and award-winning digital voice in food. Our site is a
+                who's who of renowned experts and celebrities; our audience is passionate and informed; and our
+                ubiquitous, ground-breaking apps empower food lovers everywhere.
+            </p>
 
-            <a class="button" href="https://google.com">Contact Me</a>
+            <a class="button" href="https://www.foodpanda.com.bd/city/sylhet" target="_blank">Contact Me</a>
         </div>
 
     </section>
@@ -47,34 +50,56 @@
     <section class="my-receipes">
         <div class="text-my-receipes">
             <h1>My Recipies</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, reiciendis vitae, ipsa iusto minus
-                facere magni assumenda culpa pariatur neque provident minima nostrum consequatur porro. Quis ut mollitia
-                deleniti est!</p>
+            <p>Are you tired to findout what should your snacks now? Here is our most popular snacks items for you.</p>
         </div>
+    </section>
 
-        <div class="foodmenu">
-            <div class="half">
-                <img src="images/food/Project Cover.jpg" alt="">
-                <h1>text</h1>
-                <p>text</p>
+    <section class="receipes">
+        <div class="single-receipe">
+            <div class="receipe-image">
+                <img src="images/my/1.jpg" alt="">
             </div>
-            <div>
-                <img src="images/food/Project Cover.jpg" alt="">
-                <h1>text</h1>
-                <p>text</p>
-            </div>
-            <div>
-                <img src="images/food/Project Cover.jpg" alt="">
-                <h1>text</h1>
-                <p>text</p>
+            <div class="receipe-title-des">
+                <h2>Garlicky Ramen Noodle</h2>
+                <p>This Garlicky Instant Ramen Noodle Salad Belongs at Your Next Barbecue
+                    This easy dish from Epi contributor Leela Punyaratabandhu is also perfect for bringing to a picnic.
+                </p>
             </div>
         </div>
+        <div class="single-receipe">
+            <div class="receipe-image">
+                <img src="images/my/2.jpg" alt="">
+            </div>
+            <div class="receipe-title-des">
+                <h2>Chicken Burgers With Mushrooms</h2>
+                <p>What Do Chicken Burgers Want? Mushrooms!
+                    Blend chopped mushrooms with ground chicken, then stack them two patties high with melted cheese for
+                    the best chicken burger experience of your life.</p>
+            </div>
+        </div>
+        <div class="single-receipe">
+            <div class="receipe-image">
+                <img src="images/my/3.jpg" alt="">
+            </div>
+            <div class="receipe-title-des">
+                <h2>Chips in Salsa</h2>
+                <p>Forget Chips and Salsa. Make Chips in Salsa
+                    If you can’t eat just one tortilla chip, this salsa de totopos, served with sweet corn, is the salsa
+                    of your dreams.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="email">
+        <h3>Get our latest recipes and expert tips right in your inbox</h3>
+        <input id="input-button" type="text" placeholder="Enter Email"></input>
+        <button id="submit-button"> Subscribe </button>
 
     </section>
 
     <section class="footer">
         <div class="text-footer">
-            <h2><span class="text-orange">Food</span> <span class="text-ash-bright">Network</span></h2>
+            <h2><span class="text-orange">EPIC</span> <span class="text-ash-bright">RECEIPE</span></h2>
             <p><small> Healthy to live healthy. LIve to live happy</small></p>
         </div>
 
