--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Network</title>
+    <title>Epic Receipe</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -36,7 +36,7 @@
                 alt="">
         </div>
         <div class="half" id="text-about-me">
-            <h2 class="text-ash">About Me</h2>
+            <h1 class="text-ash-bright">About Me</h1>
             <p>Epic Receipe is the most trusted, authoritative, and award-winning digital voice in food. Our site is a
                 who's who of renowned experts and celebrities; our audience is passionate and informed; and our
                 ubiquitous, ground-breaking apps empower food lovers everywhere.
